code mirror editor - Paweł fix && reverse buttons on mobile

--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -52,6 +52,7 @@
 
 @media (max-width: 1195px) {
   #inputs {
+    flex-direction: column-reverse;
     justify-content: center;
     align-items: flex-start;
   }
